# imageio-freeimage

./: .gitignore  FIPL LICENSE  LICENSE  README.md  build.py  linux_conf.py  macos_conf.py  pyproject.toml  tox.ini  win32_conf.py
.github/workflows/: cd.yaml  ci.yaml
imageio_freeimage/: __init__.py  _freeimage.py  freeimage.py  freeimagemulti.py
tests/: test_freeimage.py
