[tool.poetry]
name = "imageio_freeimage"
version = "0.1.0"
description = "A plugin for ImageIO that wraps the FreeImage library"
authors = ["ImageIO collaborators"]
license = "FreeImage Open Source Dual-License"

[tool.poetry.dependencies]
python = ">=3.7<=3.10"
imageio = "^2.19.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
fsspec = {extras = ["github"], version = "^2022.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
