[tool.poetry]
name = "imageio_freeimage"
version = "0.1.0"
description = "A plugin for ImageIO that wraps the FreeImage library"
authors = ["ImageIO collaborators"]
license = "FreeImage Open Source Dual-License"
readme = "README.md"
repository = "https://github.com/imageio/imageio-freeimage"
include = [
    "FIPL LICENSE",
    "LICENSE",
]
build="build.py"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
imageio = "^2.19.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
fsspec = {extras = ["github"], version = "^2022.5.0"}
black = {version = "^22.6.0", allow-prereleases = true}
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "requests"]
build-backend = "poetry.core.masonry.api"
